samples/_failures_safe/1761669639_841513_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2b25a0d.c: In function ‘main’:
./samples/SAFE/__tmp_b2b25a0d.c:146:5: error: expected expression at end of input
  146 |     if (
      |     ^~
./samples/SAFE/__tmp_b2b25a0d.c:146:5: error: expected declaration or statement at end of input
